--- a/tests/testing.ipynb
+++ b/tests/testing.ipynb
@@ -249,11 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
-    "import random\n",
-    "from torch.utils.data import DataLoader\n",
+    "\n",
     "from transformiloop.src.data.pretraining import read_pretraining_dataset\n",
-    "from transformiloop.src.data.spindle_trains import EquiRandomSampler, SpindleTrainDataset, read_spindle_trains_labels\n",
+    "from transformiloop.src.data.spindle_trains import SpindleTrainDataset, read_spindle_trains_labels\n",
     "from transformiloop.src.utils.configs import initialize_config\n",
     "\n",
     "\n",
@@ -360,10 +358,10 @@
      "evalue": "list index out of range",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfor\u001b[39;00m index ,(onset, offset, l) \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(\u001b[39mzip\u001b[39m(labels[train_subjects[\u001b[39m0\u001b[39m]][\u001b[39m'\u001b[39m\u001b[39monsets\u001b[39m\u001b[39m'\u001b[39m], labels[train_subjects[\u001b[39m0\u001b[39m]][\u001b[39m'\u001b[39m\u001b[39moffsets\u001b[39m\u001b[39m'\u001b[39m], labels[train_subjects[\u001b[39m0\u001b[39m]][\u001b[39m'\u001b[39m\u001b[39mlabels_num\u001b[39m\u001b[39m'\u001b[39m])):\n\u001b[0;32m----> 2\u001b[0m     \u001b[39mif\u001b[39;00m onset \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m count[\u001b[39m0\u001b[39;49m] \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m offset:\n\u001b[1;32m      3\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mFound \u001b[39m\u001b[39m{\u001b[39;00monset\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00moffset\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m{\u001b[39;00ml\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m         \u001b[39mprint\u001b[39m(index)\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mIndexError\u001B[0m                                Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[6], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[39mfor\u001B[39;00m index ,(onset, offset, l) \u001B[39min\u001B[39;00m \u001B[39menumerate\u001B[39m(\u001B[39mzip\u001B[39m(labels[train_subjects[\u001B[39m0\u001B[39m]][\u001B[39m'\u001B[39m\u001B[39monsets\u001B[39m\u001B[39m'\u001B[39m], labels[train_subjects[\u001B[39m0\u001B[39m]][\u001B[39m'\u001B[39m\u001B[39moffsets\u001B[39m\u001B[39m'\u001B[39m], labels[train_subjects[\u001B[39m0\u001B[39m]][\u001B[39m'\u001B[39m\u001B[39mlabels_num\u001B[39m\u001B[39m'\u001B[39m])):\n\u001B[0;32m----> 2\u001B[0m     \u001B[39mif\u001B[39;00m onset \u001B[39m<\u001B[39m\u001B[39m=\u001B[39m count[\u001B[39m0\u001B[39;49m] \u001B[39m<\u001B[39m\u001B[39m=\u001B[39m offset:\n\u001B[1;32m      3\u001B[0m         \u001B[39mprint\u001B[39m(\u001B[39mf\u001B[39m\u001B[39m\"\u001B[39m\u001B[39mFound \u001B[39m\u001B[39m{\u001B[39;00monset\u001B[39m}\u001B[39;00m\u001B[39m \u001B[39m\u001B[39m{\u001B[39;00moffset\u001B[39m}\u001B[39;00m\u001B[39m \u001B[39m\u001B[39m{\u001B[39;00ml\u001B[39m}\u001B[39;00m\u001B[39m\"\u001B[39m)\n\u001B[1;32m      4\u001B[0m         \u001B[39mprint\u001B[39m(index)\n",
+      "\u001B[0;31mIndexError\u001B[0m: list index out of range"
      ]
     }
    ],
