--- a/test/testing.ipynb
+++ b/test/testing.ipynb
@@ -251,7 +251,7 @@
    "source": [
     "\n",
     "from transformiloop.src.data.pretraining import read_pretraining_dataset\n",
-    "from transformiloop.src.data.spindle_trains import SpindleTrainDataset, read_spindle_trains_labels\n",
+    "from transformiloop.src.data.spindle.spindle_train import SpindleTrainDataset, read_spindle_trains_labels\n",
     "from transformiloop.src.utils.configs import initialize_config\n",
     "\n",
     "\n",
