Refactored the architecture and fixed a few imports

--- a/test/testing.ipynb
+++ b/test/testing.ipynb
@@ -244,14 +244,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "\n",
     "from transformiloop.src.data.pretraining import read_pretraining_dataset\n",
-    "from transformiloop.src.data.spindle.spindle_train import SpindleTrainDataset, read_spindle_trains_labels\n",
+    "from transformiloop.src.data.spindle.spindle_train.spindle_trains import read_spindle_trains_labels\n",
+    "from transformiloop.src.data.spindle.spindle_train.datasets.spindle_train_dataset import SpindleTrainDataset\n",
     "from transformiloop.src.utils.configs import initialize_config\n",
     "\n",
     "\n",
@@ -262,19 +263,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shuffling took 0.0362246036529541 seconds\n",
-      "Number of spindle labels: 95264\n"
-     ]
-    }
-   ],
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "config = initialize_config(\"test\")\n",
     "config['model_type'] = \"transformer\"\n",
